--- a/src/main/resources/templates/editBlogForm.html
+++ b/src/main/resources/templates/editBlogForm.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-<title>Title</title>
-<link th:href="@{/blog.css}", rel="stylesheet">
-<script type="text/javascript" th:src="@{/blog.js}"></script>
+    <title><!DOCTYPE html>
+
+        <html lang="en" xmlns:th="http://www.thymeleaf.org/%22%3E
+        <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+    <link th:href="@{/blog.css}", rel="stylesheet">
+    <script type="text/javascript" th:src="@{/blog.js}"></script>
 </head>
 
 <body>
@@ -23,5 +27,10 @@
     <br><br>
     <a th:href="@{/blog/addBlog}"><button>Add new blogpost</button></a>
 </div>
+</body>
+</html></title>
+</head>
+<body>
+
 </body>
 </html>
